Fix select inputs overflowing

--- a/src/subtitulamos/resources/assets/css/form.css
+++ b/src/subtitulamos/resources/assets/css/form.css
@@ -60,7 +60,9 @@
 .form-field textarea {
   flex: 1;
   color: var(--color-gray-a);
-  max-width: calc(100% - 20px); /* whole width minus icon size */
+  max-width: calc(
+    100% - var(--standard-padding-x) * 2 - 20px
+  ); /* whole width - margin - icon size */
   width: 100%;
   margin: var(--standard-padding);
   min-height: 1.5rem;
